# Neural-Network

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  debug.txt  my_net.cpp
example/connect_four/: connect_four.cpp
example/four_bits/: four_bits.cpp
example/outline/: outline.cpp
example/outline/bitmap/: bmp.cpp  bmp.h
include/snn/network/: Network.h
include/snn/perceptron/: Perceptron.h  Perceptron_input.h  Perceptrons.h
include/snn/serializer/: Bin_serializer.h  Serial_vector.h  Serializer.h  Src_serializer.h
include/snn/trainer/: Trainer.h  Training_configuration.h
include/snn/trainer/training_process/: GD_adagrad_process.h  GD_adam_process.h  GD_momentum_process.h  GD_nesterov_process.h  GD_rmsprop_process.h  Steepest_descent_process.h  Trainig_process.h
include/snn/utility/: Matrix.h
network/: plot_file.m
network/src/: main.cpp
network/src/network/: Network.cpp  Network.h
network/src/perceptron/: Perceptron.cpp  Perceptron.h  Perceptrons.cpp  Perceptrons.h
network/src/trainer/: Trainer.cpp  Trainer.h  Training_configuration.h
network/src/trainer/training process/: GD_adagrad_process.cpp  GD_adagrad_process.h  GD_adam_process.cpp  GD_adam_process.h  GD_momentum_process.cpp  GD_momentum_process.h  GD_nesterov_process.cpp  GD_nesterov_process.h  GD_rmsprop_process.cpp  GD_rmsprop_process.h  Steepest_descent_process.cpp  Steepest_descent_process.h  Trainig_process.cpp  Trainig_process.h
network/src/utility/: Color.h
script/: plot_file.m
src/snn/network/: Network.cpp
src/snn/perceptron/: Perceptron.cpp  Perceptrons.cpp
src/snn/serializer/: Bin_serializer.cpp  Serializer.cpp  Src_serializer.cpp
src/snn/trainer/: Trainer.cpp
src/snn/trainer/training_process/: GD_adagrad_process.cpp  GD_adam_process.cpp  GD_momentum_process.cpp  GD_nesterov_process.cpp  GD_rmsprop_process.cpp  Steepest_descent_process.cpp  Trainig_process.cpp
